<resources>
    <string name="app_name">QQ安全中心</string>
    <string name="qq_passwd">密码:</string>
    <string name="qq_passwd_forget_get">https://aq.qq.com/cn2/findpsw/mobile_v2/mobile_web_find_select_way?lang=zh_cn&amp;login_type=normal&amp;source_id=3166</string>
    <string name="test_qq_passwd_forget_get">http://test.aq.qq.com/cn2/findpsw/mobile_v2/mobile_web_find_select_way?lang=zh_cn&amp;login_type=normal&amp;source_id=3166</string>
    <string name="exp_qq_passwd_forget_get">http://exp.aq.qq.com/cn2/findpsw/mobile_v2/mobile_web_find_select_way?lang=zh_cn&amp;login_type=normal&amp;source_id=3166</string>
    <string name="gray_qq_passwd_forget_get">http://gray.aq.qq.com/cn2/findpsw/mobile_v2/mobile_web_find_select_way?lang=zh_cn&amp;login_type=normal&amp;source_id=3166</string>
    <string name="token_error_url_null">地址为空</string>
    <string name="des_fail">解密失败</string>
    <string name="confirm_button">确定</string>
    <string name="confirm_button_interval">确 定</string>
    <string name="return_button">返回</string>
    <string name="return_main">返回首页</string>
    <string name="cancel_button">取消</string>
    <string name="next_button">下一步</string>
    <string name="complete_button">完成</string>
    <string name="send_button">发送</string>
    <string name="alert_button">提示</string>
    <string name="later_button">以后再说</string>
    <string name="display">显示</string>
    <string name="hide">隐藏</string>
    <string name="pos_button">是</string>
    <string name="neg_button">否</string>
    <string name="set_button">设置</string>
    <string name="mod_button">修改</string>
    <string name="progress_message">信息读取中…</string>
    <string name="progress_doing">正在处理…</string>
    <string name="dlg_exit_content">请确认退出QQ安全中心</string>
    <string name="activity_sms_info10_1">我们将给您的密保手机</string>
    <string name="activity_sms_info10_3">发送验证码短信，确定手机可用请点击下一步</string>
    <string name="activity_sms_info11">请填写您收到的短信验证码:</string>
    <string name="activity_sms_info12">已读取短信验证码</string>
    <string name="activity_sms_info13">重发短信</string>
    <string name="activity_sms_info14">更换验证方式</string>
    <string name="activity_sms_info15">验证码</string>
    <string name="activity_sms_info16">请输入QQ令牌动态密码</string>
    <string name="activity_sms_info17">正在绑定，请稍候…</string>
    <string name="active_question_1">问题一:</string>
    <string name="active_question_2">问题二:</string>
    <string name="active_question_3">问题三:</string>
    <string name="active_fail_title_2">呜，绑定QQ失败了！</string>
    <string name="activity_fail_4">密保手机绑定失败，请重新绑定</string>
    <string name="activity_fail_5">输入有误，请重新输入。</string>
    <string name="activity_fail_6">发送短信失败，请确认本手机是您的密保手机。</string>
    <string name="activity_fail_7">您的答案填错了哦，请填写2至16个阿拉伯数字</string>
    <string name="activity_fail_8">您的答案填错了哦，请填写1–30个中文或2–60个英文</string>
    <string name="activity_fail_9">您的答案填错了哦，请重新填写。日期格式为：20080619</string>
    <string name="activity_succ_1">恭喜！</string>
    <string name="activity_succ_2">恭喜，QQ安全中心绑定成功！</string>
    <string name="activity_succ_3">开启安全之旅</string>
    <string name="account_head">QQ:</string>
    <string name="activity_succ_title">绑定成功</string>
    <string name="account_have_bind_mb">已绑定密保手机：</string>
    <string name="activity_await_detail">处理中，请稍候…</string>
    <string name="activity_url">aq.qq.com/sj</string>
    <string name="activity_bind_mbmobile">重新绑定手机</string>
    <string name="activity_unbind_mbmobile">暂不绑定</string>
    <string name="bind_cofirm_tips">将作为您的密保手机，请确认手机号是否填写正确。</string>
    <string name="bind_mb_title">绑定密保手机</string>
    <string name="bind_mb_btn_cancel">暂不绑定</string>
    <string name="bind_mb_btn_ok">我要绑定</string>
    <string name="bind_btn_confirm">确认无误</string>
    <string name="bind_btn_modify">修改号码</string>
    <string name="bind_btn_nocheck">跳过验证</string>
    <string name="bind_nocheck_tips">授权QQ安全中心访问你的登录信息，可以跳过验证，快速绑定帐号</string>
    <string name="bind_nocheck_noauth">暂不授权，验证密保</string>
    <string name="bind_nocheck_verifyphone_tips">请填写完整手机号，帮助我们识别你的身份。</string>
    <string name="bind_nocheck_verifyphone_name">密保手机：</string>
    <string name="bind_nocheck_verifyphone_inputtip">请输入完整的手机号</string>
    <string name="bind_nocheck_verifyphone_forget">忘记手机号？立即更换</string>
    <string name="bind_nocheck_verifyphone_title">填写密保手机号</string>
    <string name="bind_forgetphone_url">https://aq.qq.com/v2/wireless/manage/mobile/mb_mobile.html</string>
    <string name="unbind_confirm_tip_1">请确认该帐号绑定的密保手机</string>
    <string name="unbind_confirm_tip_2">，是否为本手机？如不是，请立即更换。</string>
    <string name="unbind_btn_confirm">继续解绑</string>
    <string name="unbind_btn_change_mobile">更换手机</string>
    <string name="unbind_title_change_mbmobile">更换密保手机</string>
    <string name="unbind_btn_try">再试一次</string>
    <string name="check_current_mobile">请确认本机号码是否为</string>
    <string name="unbind_confirm_send_to_verify">需要您发送一条短信进行验证</string>
    <string name="unbind_fee_tip">短信费用一般为0.1元/条，由运营商收取</string>
    <string name="unbind_btn_current_to_verify">是本机号码，立即验证</string>
    <string name="unbind_btn_not_current_to_change">该号码不是本机号</string>
    <string name="have_changed_mobile">我已经换号了</string>
    <string name="mobile_still_available">该号码仍可用</string>
    <string name="check_mobile_available">请确认该号码是否可用</string>
    <string name="use_mb_mobile_to_send_sms">请用密保手机%1$s编辑如下短信，然后点击我已发送按钮</string>
    <string name="send_sms">发短信:</string>
    <string name="num_to_send_sms">到号码:</string>
    <string name="have_sended">我已发送</string>
    <string name="sms_not_sended">您的短信还未送达，请确认是否发送正确</string>
    <string name="is_checking">正在验证...</string>
    <string name="bind_activity_url">https://aq.qq.com/sj</string>
    <string name="title_about">关于QQ安全中心</string>
    <string name="about_info1">QQ安全中心</string>
    <string name="about_info1_1">V6.5.0</string>
    <string name="about_info2">腾讯公司 版权所有</string>
    <string name="about_info3">Copyright© 1998–2016 Tencent. All Rights Reserved</string>
    <string name="about_info5">使用协议</string>
    <string name="about_aq_video">官方视频</string>
    <string name="about_aq_video_url">http://player.youku.com/embed/XNzcwMTc3NDUy</string>
    <string name="protocol_url">http://m.aq.qq.com/cn/manage/token/wtoken_terms</string>
    <string name="about_list_serialnumber">序列号</string>
    <string name="about_no_update">已是最新版本</string>
    <string name="correct_time_desc">QQ安全中心时间与北京时区时间的误差超过2分钟时无法使用</string>
    <string name="correct_time_title">校准时间</string>
    <string name="correct_time_auto_process">自动校准时间中…</string>
    <string name="correct_time_auto_corrent">自动校准</string>
    <string name="correct_time_fail_title">校准时间失败</string>
    <string name="correct_time_network">请确认您的网络连接!</string>
    <string name="modify_pwd">修改密码</string>
    <string name="tab_name_notify">安全通知</string>
    <string name="unbind_title">解绑</string>
    <string name="unbind_succ_title">解绑成功</string>
    <string name="unbing_ing">正在解绑，请稍候…</string>
    <string name="unbind_succ_tail">已解绑</string>
    <string name="unbind_fail_titile">解绑失败</string>
    <string name="title_unbindQQ">解绑QQ</string>
    <string name="unbind_sms_tip">"提醒：解绑过程会发送一条短信确认密保手机，并产生少量数据流量。腾讯不收费，费用由运营商收取，一般为0.1元。
(请勿修改即将发送的短信内容)"</string>
    <string name="unbind_tip_1">尚未绑定密保手机，为了您的帐号安全，请先绑定密保手机后再解绑。</string>
    <string name="unbind_succ_btn_txt">完 成</string>
    <string name="unbind_unverify_user_tip">您确定要解绑该帐号?</string>
    <string name="qq_account">帐号:</string>
    <string name="btn_retry">重试</string>
    <string name="text_pwd_name">修改密码</string>
    <string name="safe_msg_action_default">立即处理</string>
    <string name="safe_msg_feedback_default">是我登录，但地点有误</string>
    <string name="safe_conf_setting">正在操作中…</string>
    <string name="safe_conf_clear_fail">操作失败</string>
    <string name="safe_conf_loading">信息读取中,请稍候…</string>
    <string name="safe_conf_add_uin">添加帐号</string>
    <string name="login_location_prefix">上次登录:</string>
    <string name="login_location_loading">查询中…</string>
    <string name="login_location_unknow">暂时没有登录信息</string>
    <string name="login_location_ipc">近期有异地登录</string>
    <string name="title_modify_pwd">修改QQ密码</string>
    <string name="modify_pwd_title">请输入新密码</string>
    <string name="modify_pwd_tip">密码由6-16个字符组成，区分大小写，且不能是9位以下纯数字，不能包括空格及中文字符。</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="dlg_pwd_confirm_prefix">"您的QQ密码将修改为:
"</string>
    <string name="dlg_pwd_modifing">正在修改密码中…</string>
    <string name="tip_pwd_success">密码修改成功</string>
    <string name="tip_pwd_fail">修改密码失败</string>
    <string name="set_token_passwd_tip">担心手机丢失，QQ密码被他人修改? 您还可以设置启动密码!</string>
    <string name="token_special_string">XiaoYangNiJiuPoJieBa</string>
    <string name="token_pwd_select_modify">修改启动密码</string>
    <string name="token_pwd_select_delete">删除启动密码</string>
    <string name="token_pwd_input_go">请输入启动密码</string>
    <string name="title_token_pwd_verify">验证启动密码</string>
    <string name="token_pwd_btn_verify">进入QQ安全中心</string>
    <string name="vry_login_pwd">验证登录密码</string>
    <string name="token_pwd_verify_fail">启动密码输入错误</string>
    <string name="err_network">网络连接失败，请查看网络</string>
    <string name="err_network_close">网络连接断了，请查看网络</string>
    <string name="err_no_user">暂未绑定QQ号码</string>
    <string name="err_empty">您的输入为空</string>
    <string name="err_empty_mobile">手机号不能为空</string>
    <string name="err_empty_verify_msg">验证码为空</string>
    <string name="account_manage_tip_menu">经过您验证授权后，即可开启全部功能</string>
    <string name="account_manager_menuitem_verify">立即验证</string>
    <string name="account_manager_menuitem_switch">切换至此帐号</string>
    <string name="account_manager_menuitem_delete">解绑此帐号</string>
    <string name="account_manager_menuitem_cancel">取消</string>
    <string name="look_network_sub_title">您的设备未启用移动网络或无线局域网</string>
    <string name="look_network_item_1">如需要连接到互联网，请参照以下方法：</string>
    <string name="look_network_item_1_1">检查手机中的无线局域网设置，查看是否有可接入的无线局域网信号。</string>
    <string name="look_network_item_1_2">检查手机是否已接入移动网络，并且手机没有被停机。</string>
    <string name="look_network_item_2">如果您已接入无线局域网：</string>
    <string name="look_network_item_2_1">请检查您所连接的无线局域网热点是否已接入互联网，或该热点是否已允许您的设备访问互联网。</string>
    <string name="mobile_country_china">中国大陆</string>
    <string name="mobile_country_china_num">+86</string>
    <string name="mobile_country_hongkong">中国香港</string>
    <string name="mobile_country_hongkong_num">+852</string>
    <string name="mobile_country_macau">中国澳门</string>
    <string name="mobile_country_macau_num">+853</string>
    <string name="mobile_country_taiwan">中国台湾</string>
    <string name="mobile_country_taiwan_num">+886</string>
    <string name="mobile_country_america">美国</string>
    <string name="mobile_country_america_num">+1</string>
    <string name="mobile_country_japan">日本</string>
    <string name="mobile_country_japan_num">+81</string>
    <string name="mobile_country_korea">韩国</string>
    <string name="mobile_country_korea_num">+82</string>
    <string name="mobile_country_singapore">新加坡</string>
    <string name="mobile_country_singapore_num">+65</string>
    <string name="mobile_country_canada">加拿大</string>
    <string name="mobile_country_canada_num">+1</string>
    <string name="mobile_country_australia">澳大利亚</string>
    <string name="mobile_country_australia_num">+61</string>
    <string name="mobile_country_italy">意大利</string>
    <string name="mobile_country_italy_num">+39</string>
    <string name="mobile_country_malaysia">马拉西亚</string>
    <string name="mobile_country_malaysia_num">+60</string>
    <string name="mobile_country_philippines">菲律宾</string>
    <string name="mobile_country_philippines_num">+63</string>
    <string name="mobile_country_thailand">泰国</string>
    <string name="mobile_country_thailand_num">+66</string>
    <string name="mobile_country_indonesia">印度尼西亚</string>
    <string name="mobile_country_indonesia_num">+62</string>
    <string name="mobile_country_tips">密保手机暂时仅支持以上国家地区，后续会逐渐增加，敬请期待。</string>
</resources>