<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/login_msg_menu_mask" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/menu_nick" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" style="@style/text_view_white" />
    <TextView android:id="@id/menu_verify_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/account_manage_tip_menu" android:layout_below="@id/menu_nick" android:layout_centerHorizontal="true" style="@style/account_manage_menu_tip" />
    <Button android:id="@id/menu_action_doverify" android:background="@drawable/blue_btn_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="10.0dip" android:text="@string/account_manager_menuitem_verify" android:layout_below="@id/menu_verify_tip" style="@style/text_view_white" />
    <Button android:id="@id/menu_action_switch" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="10.0dip" android:text="@string/account_manager_menuitem_switch" android:layout_below="@id/menu_action_doverify" style="@style/text_view_white" />
    <Button android:id="@id/menu_action_delete" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="10.0dip" android:text="@string/account_manager_menuitem_delete" android:layout_below="@id/menu_action_switch" style="@style/text_view_white" />
    <Button android:id="@id/menu_action_cancel" android:background="@drawable/gray_btn_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="10.0dip" android:text="@string/account_manager_menuitem_cancel" android:layout_below="@id/menu_action_delete" style="@style/text_view" />
</RelativeLayout>