<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:background="@color/background" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/country_list_china" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="26.0dip" android:layout_alignParentTop="true">
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentTop="true" />
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_china" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_china" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_china" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_china_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_hongkong" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_china">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_hongkong" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_hongkong" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_hongkong" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_hongkong_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_macau" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_hongkong">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_macau" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_macau" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_macau" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_macau_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_taiwan" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_macau">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_taiwan" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_taiwan" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_taiwan" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_taiwan_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_america" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_taiwan">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_america" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_america" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_america" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_america_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_japan" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_america">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_japan" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_japan" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_japan" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_japan_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_korea" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_japan">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_korea" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_korea" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_korea" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_korea_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_singapore" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_korea">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_singapore" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_singapore" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_singapore" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_singapore_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_canada" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_singapore">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_canada" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_canada" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_canada" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_canada_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_australia" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_canada">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_australia" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_australia" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_australia" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_australia_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_italy" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_australia">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_italy" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_italy" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_italy" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_italy_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_malaysia" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_italy">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_malaysia" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_malaysia" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_malaysia" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_malaysia_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_philippines" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_malaysia">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_philippines" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_philippines" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_philippines" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_philippines_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_thailand" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_philippines">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_thailand" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_thailand" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_thailand" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_thailand_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/country_list_indonesia" android:background="@color/common_list_item_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/country_list_thailand">
            <TextView android:gravity="center_vertical" android:id="@id/tv_country_name_indonesia" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:text="@string/mobile_country_indonesia" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/text_view" />
            <TextView android:gravity="center|left" android:id="@id/tv_country_number_indonesia" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="28.0dip" android:text="@string/mobile_country_indonesia_num" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/text_view" />
            <View android:background="@color/common_list_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="12.0dip" android:text="@string/mobile_country_tips" android:layout_below="@id/country_list_indonesia" style="@style/text_view_17" />
    </RelativeLayout>
</ScrollView>